private_routing.tf
resource "aws_eip" "nat" {
  domain = "vpc"

  tags = {
    Name = "tp-15-eip"
  }
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_a.id

  tags = {
    Name = "tp-15-nat"
  }

  depends_on = [aws_internet_gateway.main]
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }

  tags = {
    Name = "tp-15-rt-prive"
  }
}

resource "aws_route_table_association" "prive_a" {
  subnet_id      = aws_subnet.prive_a.id
  route_table_id = aws_route_table.private.id
}
